--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,7 @@ Author email: nidhiarivu@gmail.com
               data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
               aria-label="Toggle navigation">
               <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
-              <span class="navbar-toggler-icon fa icon-close fa-times"></span>
-              </span>
+              <span class="navbar-toggler-icon fa icon-close fa-times"></span>             
           </button>
 
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -117,7 +116,7 @@ Author email: nidhiarivu@gmail.com
                         </div>
                         <div class="cont-right">
                             <h6>Location</h6>
-                            <p>No 16, CMC Road, Senjai, Karaikudi - 630001, Sivagangai dist.</p>
+                            <p> Karaikudi, Sivagangai dist, TamilNadu.</p>
                         </div>
                     </div>
                 </div>
@@ -145,11 +144,11 @@ Author email: nidhiarivu@gmail.com
     </div>
 </section>
 <!-- /contact1 -->
-<div class="map-iframe">
+<!--<div class="map-iframe">
     <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C+UK!5e0!3m2!1sen!2spl!4v1562654563739!5m2!1sen!2spl"
         width="100%" height="400" frameborder="0" style="border: 0px;" allowfullscreen=""></iframe>
-</div>
+</div> -->
 <!-- //contact block -->
 <!-- Footer -->
 <section class="w3l-footer py-sm-5 py-4">
