New Files Added
New Files Added

--- a/about.html
+++ b/about.html
@@ -47,6 +47,8 @@ Author email: nidhiarivu@gmail.com
                         <li class="nav-item active">
                             <a class="nav-link" href="about.html">About</a>
                         </li>
+                        <li class="nav-item @@gallery__active"><a href="gallery.html" class="nav-link">Gallery</a></li>
+                        <li class="nav-item @@product__active"><a href="product.html" class="nav-link">Products</a></li>
                         <li class="nav-item @@contact__active">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
@@ -354,7 +356,7 @@ Author email: nidhiarivu@gmail.com
                             Arivunidhi © Copyright
                             <script>
                                 document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-                            </script>. Design by <a href="https://w3layouts.com">Nithi's Soft</a>
+                            </script>. Design by <a href="#">Nithi's Soft</a>
                         </p>
                     </div>
                     <div class="col-lg-4 footer-right text-lg-right text-center mt-lg-0 mt-3">
