--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@ Author email: nidhiarivu@gmail.com
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>Arivunidhi Personal Portfolio | Home</title>
+  <link rel="shortcut icon" class="fa fa-laptop"/>
 
   <!-- google fonts -->  
-  <link href="//fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
-
+  <link href="http://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&amp;display=swap" rel="stylesheet">
+	<link href="http://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&amp;display=swap" rel="stylesheet">
+ 
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/style-starter.css">
 </head>
@@ -47,6 +49,8 @@ Author email: nidhiarivu@gmail.com
                   <li class="nav-item @@about__active">
                       <a class="nav-link" href="about.html">About</a>
                   </li>
+                  <li class="nav-item @@gallery__active"><a href="gallery.html" class="nav-link">Gallery</a></li>
+                  <li class="nav-item @@product__active"><a href="product.html" class="nav-link">Products</a></li>
                   <!-- <li class="nav-item @@services-page_active">
                     <a class="nav-link" href="services-page.html">Services</a>
                   </li>
@@ -204,7 +208,7 @@ Author email: nidhiarivu@gmail.com
                                     </div>
                                     <h4 class="number">02</h4>
                                     <h4><a href="#url">Web Application</a></h4>
-                                    <p>For the past 11 years, I have been developing excellent web applications using .NET and SQL Server technologies</p>
+                                    <p>For the past 11 years, I have been developing excellent web applications using ASP.NET, C#.NET, MVC, .NET Core and SQL Server technologies</p>
                                     <a href="#read" class="read">Read more</a>
                                 </div>
                             </div>
@@ -220,7 +224,7 @@ Author email: nidhiarivu@gmail.com
                                     </div>
                                     <h4 class="number">03</h4>
                                     <h4><a href="#url">Mobile App Development</a></h4>
-                                    <p>Over the past two years, I have gained experience in Letter Technology and have developed excellent mobile applications through this expertise.</p>
+                                    <p>Over the past two years, I have gained experience in Flutter Technology and have developed excellent mobile applications through this expertise.</p>
                                       <a href="#read" class="read">Read more</a>
                                   </div>
                             </div>
