--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,8 @@ Author email: nidhiarivu@gmail.com
                   <li class="nav-item @@about__active">
                       <a class="nav-link" href="about.html">About</a>
                   </li>
+                  <li class="nav-item @@gallery__active"><a href="gallery.html" class="nav-link">Gallery</a></li>
+                  <li class="nav-item @@product__active"><a href="product.html" class="nav-link">Products</a></li>
                   <li class="nav-item active">
                       <a class="nav-link" href="contact.html">Contact</a>
                   </li>
@@ -121,7 +123,7 @@ Author email: nidhiarivu@gmail.com
                     </div>
                 </div>
                 <div class="map-content-9">
-                    <form action="https://sendmail.w3layouts.com/submitForm" method="post">
+                    <form action="#" method="#">
                         <div class="twice-two">
                             <input type="text" class="form-control" name="w3lName" id="w3lName" placeholder="Name"
                                 required="">
@@ -158,7 +160,7 @@ Author email: nidhiarivu@gmail.com
         <div class="col-lg-8 footer-left">
           <p class="m-0" id="copyright">Arivunidhi © Copyright  <script>
             document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-          </script>. Design by <a href="https://w3layouts.com">Nithi's Soft</a></p>
+          </script>. Design by <a href="#">Nithi's Soft</a></p>
         </div>
         <div class="col-lg-4 footer-right text-lg-right text-center mt-lg-0 mt-3">
           <ul class="social m-0 p-0">
