--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@ Author email: nidhiarivu@gmail.com
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>Arivunidhi Personal Portfolio | Home</title>
+  <link rel="shortcut icon" class="fa fa-laptop"/>
 
   <!-- google fonts -->  
-  <link href="//fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
-
+  <link href="http://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&amp;display=swap" rel="stylesheet">
+	<link href="http://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&amp;display=swap" rel="stylesheet">
+ 
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/style-starter.css">
 </head>
@@ -47,6 +49,8 @@ Author email: nidhiarivu@gmail.com
                   <li class="nav-item @@about__active">
                       <a class="nav-link" href="about.html">About</a>
                   </li>
+                  <li class="nav-item @@gallery__active"><a href="gallery.html" class="nav-link">Gallery</a></li>
+                  <li class="nav-item @@product__active"><a href="product.html" class="nav-link">Products</a></li>
                   <!-- <li class="nav-item @@services-page_active">
                     <a class="nav-link" href="services-page.html">Services</a>
                   </li>
@@ -96,7 +100,7 @@ Author email: nidhiarivu@gmail.com
                   I always strive to create excellent applications with exceptional user interfaces (UI).</p>
                 <div class="mt-sm-5 mt-4">
                     <a class="btn btn-primary btn-style mr-2" href="contact.html"> Hire Me </a>
-                    <a class="btn btn-outline-primary btn-style mr-2" href="#portfolio"> Portfolio </a>
+                    <a class="btn btn-outline-primary btn-style mr-2" href="about.html"> Portfolio </a>
                 </div>
             </div>
             <div class="col-lg-6 col-md-8 col-sm-10 mt-lg-0 mt-4">
@@ -123,12 +127,40 @@ Author email: nidhiarivu@gmail.com
                     <h5 class="title-small mb-2">Who am i?</h5>
                     <h3 class="title-big">I'm Arivunidhi, a Full stack developer, .Net developer, Web Designer and Freelancer.</h3>
                     <p class="mt-4"> I have been actively involved in website development for over a decade, utilizing a range of technical skills to deliver high-quality websites</p>
-                    <a href="#download" class="btn btn-style btn-primary mt-lg-5 mt-4">Download CV</a>
+                    <a href="assets/txt/Arivunidhi_11Years.docx" class="btn btn-style btn-primary mt-lg-5 mt-4">Download CV</a>
                 </div>
             </div>
         </div>
     </div>
 </section>
+<!-- stats -->
+<section class="w3l-stats py-lg-5 py-4" id="stats">
+  <div class="gallery-inner container py-md-5 py-4">
+      <div class="row stats-con">
+          <div class="col-sm-3 col-6 stats_info counter_grid">
+              <span class="fa fa-laptop"></span>
+              <p class="counter">20</p>
+              <h4>Completed projects</h4>
+          </div>
+          <div class="col-sm-3 col-6 stats_info counter_grid1">
+              <span class="fa fa-hourglass-end"></span>
+              <p class="counter">2</p>
+              <h4>In processes</h4>
+          </div>
+          <div class="col-sm-3 col-6 stats_info counter_grid mt-sm-0 mt-5">
+              <span class="fa fa-gift"></span>
+              <p class="counter">1</p>
+              <h4>Awards Received</h4>
+          </div>
+          <div class="col-sm-3 col-6 stats_info counter_grid2 mt-sm-0 mt-5">
+              <span class="fa fa-smile-o"></span>
+              <p class="counter">8</p>
+              <h4>Happy Clients</h4>
+          </div>
+      </div>
+  </div>
+</section>
+<!-- //stats -->
 <!-- //home page about section -->
 
 <!-- home page second section -->
@@ -176,7 +208,7 @@ Author email: nidhiarivu@gmail.com
                                     </div>
                                     <h4 class="number">02</h4>
                                     <h4><a href="#url">Web Application</a></h4>
-                                    <p>For the past 11 years, I have been developing excellent web applications using .NET and SQL Server technologies</p>
+                                    <p>For the past 11 years, I have been developing excellent web applications using ASP.NET, C#.NET, MVC, .NET Core and SQL Server technologies</p>
                                     <a href="#read" class="read">Read more</a>
                                 </div>
                             </div>
@@ -192,7 +224,7 @@ Author email: nidhiarivu@gmail.com
                                     </div>
                                     <h4 class="number">03</h4>
                                     <h4><a href="#url">Mobile App Development</a></h4>
-                                    <p>Over the past two years, I have gained experience in Letter Technology and have developed excellent mobile applications through this expertise.</p>
+                                    <p>Over the past two years, I have gained experience in Flutter Technology and have developed excellent mobile applications through this expertise.</p>
                                       <a href="#read" class="read">Read more</a>
                                   </div>
                             </div>
@@ -255,45 +287,18 @@ Author email: nidhiarivu@gmail.com
 </section>
 <!-- //home page services section -->
 
-<!-- stats -->
-<section class="w3l-stats py-lg-5 py-4" id="stats">
-    <div class="gallery-inner container py-md-5 py-4">
-        <div class="row stats-con">
-            <div class="col-sm-3 col-6 stats_info counter_grid">
-                <span class="fa fa-laptop"></span>
-                <p class="counter">20</p>
-                <h4>Completed projects</h4>
-            </div>
-            <div class="col-sm-3 col-6 stats_info counter_grid1">
-                <span class="fa fa-hourglass-end"></span>
-                <p class="counter">2</p>
-                <h4>In processes</h4>
-            </div>
-            <div class="col-sm-3 col-6 stats_info counter_grid mt-sm-0 mt-5">
-                <span class="fa fa-gift"></span>
-                <p class="counter">1</p>
-                <h4>Awards Received</h4>
-            </div>
-            <div class="col-sm-3 col-6 stats_info counter_grid2 mt-sm-0 mt-5">
-                <span class="fa fa-smile-o"></span>
-                <p class="counter">8</p>
-                <h4>Happy Clients</h4>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- //stats -->
+
 <!-- testimonials -->
-<section class="w3l-clients" id="clients">
+<!-- <section class="w3l-clients" id="clients">-->
     <!-- /grids -->
-    <div class="cusrtomer-layout py-5">
+    <!-- <div class="cusrtomer-layout py-5">
         <div class="container py-lg-5 py-md-4">
             <div class="heading text-center mx-auto">
                 <h6 class="title-small text-center">Testimonials</h6>
                 <h3 class="title-big mb-md-5 mb-4">What my clients think about Me </h3>
-            </div>
+            </div> -->
             <!-- /grids -->
-            <div class="testimonial-width">
+           <!--<div class="testimonial-width">
                 <div id="owl-demo1" class="owl-carousel owl-theme mb-4">
                     <div class="item">
                         <div class="testimonial-content">
@@ -410,12 +415,12 @@ Author email: nidhiarivu@gmail.com
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
+            </div>-->
+       <!-- </div> -->
         <!-- /grids -->
-    </div>
+    <!--</div>-->
     <!-- //grids -->
-</section>
+<!--</section> -->
 <!-- //testimonials -->
 
 <!-- home page video popup section -->
@@ -480,7 +485,7 @@ Author email: nidhiarivu@gmail.com
         <div class="col-lg-8 footer-left">
           <p class="m-0" id="copyright">Arivunidhi © Copyright  <script>
             document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-          </script>. Design by <a href="https://w3layouts.com">Nithi's Soft</a></p>
+          </script>. Design by <a href="#">Nithi's Soft</a></p>
         </div>
         <div class="col-lg-4 footer-right text-lg-right text-center mt-lg-0 mt-3">
           <ul class="social m-0 p-0">
