--- a/gallery.html
+++ b/gallery.html
@@ -4,13 +4,6 @@ Author email: nidhiarivu@gmail.com
 -->
 <!doctype html>
 <html lang="en-US">
-<<<<<<< HEAD
-=======
-
-
-<!-- Mirrored from wp.w3layouts.com/alexander/portfolio-page/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 27 Dec 2024 06:20:39 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
->>>>>>> 3a7ec37f056bebdc4b398786ab1494945f363d3c
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -90,11 +83,11 @@ Author email: nidhiarivu@gmail.com
             </li>
             <li class="cat-item-1">
                 <a href="#"
-                    title="Category 1">Architecture</a>
+                    title="Category 1">Application</a>
             </li>
             <li class="cat-item-2">
                 <a href="#"
-                    title="Category 2">Web Design</a>
+                    title="Category 2">Web Site</a>
             </li>
             <li class="cat-item-3">
                 <a href="#"
@@ -116,14 +109,15 @@ Author email: nidhiarivu@gmail.com
                             alt="portfolio-img" class="img-fluid w3layouts agileits">
                         <div class="content-details fadeIn-bottom">
                             <h3 class="content-title">
-                                Pink flowers                            </h3>
+                              Clinic App                             </h3>
                             <p class="content-text">
-                                This is a short description                            </p>
+                                This system enabling clinic to manage information and data related to all aspects of 
+                                healthcare                       </p>
                         </div>
                     </a>
                 </span>
             </li>
-            <li class="portfolio-item2 content" data-id="id-2" data-type="cat-item-2">
+            <li class="portfolio-item2 content" data-id="id-2" data-type="cat-item-1">
                 <span class="image-block">
                     <a class="image-zoom"
                         href="assets/images/p2.jpg"
@@ -133,14 +127,15 @@ Author email: nidhiarivu@gmail.com
                             alt="portfolio-img" class="img-fluid w3layouts agileits">
                         <div class="content-details fadeIn-bottom">
                             <h3 class="content-title">
-                                Headphones                            </h3>
+                              Pattiyal(Billing App)                            </h3>
                             <p class="content-text">
-                                This is a short description                            </p>
+                              A Pattiyal(Billing App) combines varying software packages to track stock levels. The solution can 
+                              integrate with sales systems                        </p>
                         </div>
                     </a>
                 </span>
             </li>
-            <li class="portfolio-item2 content" data-id="id-3" data-type="cat-item-1">
+            <li class="portfolio-item2 content" data-id="id-3" data-type="cat-item-2">
                 <span class="image-block">
                     <a class="image-zoom"
                         href="assets/images/p3.jpg"
@@ -150,9 +145,9 @@ Author email: nidhiarivu@gmail.com
                             alt="portfolio-img" class="img-fluid w3layouts agileits">
                         <div class="content-details fadeIn-bottom">
                             <h3 class="content-title">
-                                Pineapple                            </h3>
+                              Easybuybye(EBB) <br>e-commerce website                            </h3>
                             <p class="content-text">
-                                This is a short description                            </p>
+                              EBB refers to the buying and selling of goods and services over the internet. It encompasses a wide range of online business activities                   </p>
                         </div>
                     </a>
                 </span>
@@ -167,9 +162,10 @@ Author email: nidhiarivu@gmail.com
                             alt="portfolio-img" class="img-fluid w3layouts agileits">
                         <div class="content-details fadeIn-bottom">
                             <h3 class="content-title">
-                                Cup of tea                            </h3>
+                              Global Resources Management                           </h3>
                             <p class="content-text">
-                                This is a short description                            </p>
+                              Global Resources Management is a complete solution to track the applications of employee who have 
+                              joined/resigned/been terminated or about to join your company.                           </p>
                         </div>
                     </a>
                 </span>
@@ -184,9 +180,10 @@ Author email: nidhiarivu@gmail.com
                             alt="portfolio-img" class="img-fluid w3layouts agileits">
                         <div class="content-details fadeIn-bottom">
                             <h3 class="content-title">
-                                Icecream                            </h3>
+                              Risk Based Inspection (RBI)                           </h3>
                             <p class="content-text">
-                                This is a short description                            </p>
+                              Risk-Based Inspection is an analysis methodology and process that, as opposed to condition
+                              based inspection                            </p>
                         </div>
                     </a>
                 </span>
