--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,7 @@ Author email: nidhiarivu@gmail.com
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Arivunidhi Personal Portfolio | Home</title>
+  <title>Arivunidhi Personal Portfolio | Gallery</title>
 
 	<link href="http://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&amp;display=swap" rel="stylesheet">
 	<link href="http://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&amp;display=swap" rel="stylesheet">
