--- a/product.html
+++ b/product.html
@@ -10,8 +10,7 @@ Author email: nidhiarivu@gmail.com
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="profile" href="https://gmpg.org/xfn/11">
-	<meta name="author" content="W3Layouts.com" />
+	<title>Arivunidhi Personal Portfolio | Products</title>
 	<link href="http://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&amp;display=swap" rel="stylesheet">
 	<link href="http://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&amp;display=swap"
 		rel="stylesheet">
@@ -27,7 +26,7 @@ Author email: nidhiarivu@gmail.com
 			<nav class="navbar navbar-expand-lg stroke">
 
 				<a class="navbar-brand" href="../index.html">
-					<span class="fa fa-laptop"></span>Alexander </a>
+					<span class="fa fa-laptop"></span>Arivunidhi </a>
 				<button class="navbar-toggler collapsed bg-gradient" type="button" data-toggle="collapse"
 					data-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false"
 					aria-label="Toggle Navigation">
