--- a/product.html
+++ b/product.html
@@ -10,7 +10,7 @@ Author email: nidhiarivu@gmail.com
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Arivunidhi Personal Portfolio | Products</title>
+	<title>Arivunidhi Personal Portfolio | My Products</title>
 	<link href="http://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&amp;display=swap" rel="stylesheet">
 	<link href="http://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&amp;display=swap"
 		rel="stylesheet">
