Add existing project files to Git

--- a/gallery.html
+++ b/gallery.html
@@ -79,7 +79,7 @@ Author email: nidhiarivu@gmail.com
         <ul class="portfolio-categ filter text-center mb-4 p-0">
             <li class="port-filter all active">
                 <a
-                    href="#">Show All</a>
+                    href="#" onclick="window.location.reload(true);">Show All</a>
             </li>
             <li class="cat-item-1">
                 <a href="#"
