--- a/Products/Clinic.html
+++ b/Products/Clinic.html
@@ -189,7 +189,15 @@ Author email: nidhiarivu@gmail.com
 
           
 
-
+ <nav class="navigation post-navigation" aria-label="Posts">
+                <h2 class="screen-reader-text">Post navigation</h2>
+                <div class="nav-links">
+                  <div class="nav-previous"><a
+                      href="../product.html" rel="prev"><span
+                        class="fa fa-arrow-left" aria-hidden="true"></span> <span class="nav-subtitle">Back to Products
+                        </span></a></div>
+                </div>
+              </nav>
             <!-- #comments -->
 
             </div>
