--- a/product.html
+++ b/product.html
@@ -80,7 +80,7 @@ Author email: nidhiarivu@gmail.com
 					<h2 class="title w3BlogHPT">My Products </h2>
 
 					<ul class="breadcrumbs-custom-path mt-2 w3BlogBC">
-						<a href="#" rel="nofollow">Home</a>&nbsp;&nbsp;&#187;&nbsp;&nbsp;Products page </a>
+						<a href="index.html" rel="nofollow">Home</a>&nbsp;&nbsp;&#187;&nbsp;&nbsp;Products page </a>
 					</ul>
 				</div>
 			</div>
