all link changed

--- a/gallery.html
+++ b/gallery.html
@@ -83,11 +83,11 @@ Author email: nidhiarivu@gmail.com
             </li>
             <li class="cat-item-1">
                 <a href="#"
-                    title="Category 1">Application</a>
+                    title="Category 1">Solo</a>
             </li>
             <li class="cat-item-2">
                 <a href="#"
-                    title="Category 2">Web Site</a>
+                    title="Category 2">Group</a>
             </li>
            <!--  <li class="cat-item-3">
                 <a href="#"
@@ -102,17 +102,16 @@ Author email: nidhiarivu@gmail.com
             <li class="portfolio-item2 content" data-id="id-1" data-type="cat-item-1">
                 <span class="image-block">
                     <a class="image-zoom"
-                        href="assets/images/KlinickDash.jpg"
+                        href="assets/images/BPS2019.jpg"
                         data-gal="prettyPhoto[gallery]">
                         <div class="content-overlay"></div>
-                        <img src="assets/images/p1.jpg"
+                        <img src="assets/images/bps.jpg"
                             alt="portfolio-img" class="img-fluid w3layouts agileits">
                         <div class="content-details fadeIn-bottom">
                             <h3 class="content-title">
-                              Clinic App                             </h3>
+                              Beyond Paradigm Summit 2019                             </h3>
                             <p class="content-text">
-                                This system enabling clinic to manage information and data related to all aspects of 
-                                healthcare                       </p>
+                                The Malaysian debut of the social humanoid robot, Sophia, which was opened by then-Prime Minister Tun Dr. Mahathir Mohamad. The event took place in KL and Kuching.                        </p>
                         </div>
                     </a>
                 </span>
@@ -120,17 +119,16 @@ Author email: nidhiarivu@gmail.com
             <li class="portfolio-item2 content" data-id="id-2" data-type="cat-item-1">
                 <span class="image-block">
                     <a class="image-zoom"
-                        href="assets/images/PatiyalDash.jpg"
+                        href="assets/images/MEEXPO2017.jpg"
                         data-gal="prettyPhoto[gallery]">
                         <div class="content-overlay"></div>
-                        <img src="assets/images/p2.jpg"
+                        <img src="assets/images/meexpo.jpg"
                             alt="portfolio-img" class="img-fluid w3layouts agileits">
                         <div class="content-details fadeIn-bottom">
                             <h3 class="content-title">
-                              Pattiyal(Billing App)                            </h3>
+                              The Malaysia E-Commerce Expo 2017                          </h3>
                             <p class="content-text">
-                              A Pattiyal(Billing App) combines varying software packages to track stock levels. The solution can 
-                              integrate with sales systems                        </p>
+                              The Malaysia E-Commerce Expo (ME EXPO) 2017 was held from November 22-24, 2017, at the Matrade Exhibition & Convention Centre (MECC) in Kuala Lumpur                    </p>
                         </div>
                     </a>
                 </span>
@@ -138,16 +136,16 @@ Author email: nidhiarivu@gmail.com
             <li class="portfolio-item2 content" data-id="id-3" data-type="cat-item-2">
                 <span class="image-block">
                     <a class="image-zoom"
-                        href="assets/images/EBB.jpg"
+                        href="assets/images/25TH2018.jpg"
                         data-gal="prettyPhoto[gallery]">
                         <div class="content-overlay"></div>
-                        <img src="assets/images/p3.jpg"
+                        <img src="assets/images/25th.jpg"
                             alt="portfolio-img" class="img-fluid w3layouts agileits">
                         <div class="content-details fadeIn-bottom">
                             <h3 class="content-title">
-                              Easybuybye(EBB) <br>e-commerce website                            </h3>
+                              Serba Dinamik 25th Anniversary                           </h3>
                             <p class="content-text">
-                              EBB refers to the buying and selling of goods and services over the internet. It encompasses a wide range of online business activities                   </p>
+                              A Silver Jubilee Anniversary Dinner was held on November 3, 2018, at the Dewan Suarah Bintulu, Sarawak                   </p>
                         </div>
                     </a>
                 </span>
@@ -155,17 +153,16 @@ Author email: nidhiarivu@gmail.com
             <li class="portfolio-item2 content" data-id="id-4" data-type="cat-item-1">
                 <span class="image-block">
                     <a class="image-zoom"
-                        href="assets/images/GRM-Home.jpg"
+                        href="assets/images/SILV2018.jpg"
                         data-gal="prettyPhoto[gallery]">
                         <div class="content-overlay"></div>
-                        <img src="assets/images/p4.jpg"
+                        <img src="assets/images/silv.jpg"
                             alt="portfolio-img" class="img-fluid w3layouts agileits">
                         <div class="content-details fadeIn-bottom">
                             <h3 class="content-title">
-                              Global Resources Management                           </h3>
+                             Serba Dinamik Silver Jubilee                          </h3>
                             <p class="content-text">
-                              Global Resources Management is a complete solution to track the applications of employee who have 
-                              joined/resigned/been terminated or about to join your company.                           </p>
+                              The 25th anniversary celebration with The founder of Serba Dinamik Datuk Dr. Mohd Abdul Karim Abdullah</p>
                         </div>
                     </a>
                 </span>
@@ -173,17 +170,16 @@ Author email: nidhiarivu@gmail.com
             <li class="portfolio-item2 content" data-id="id-5" data-type="cat-item-1">
                 <span class="image-block">
                     <a class="image-zoom"
-                        href="assets/images/rbi.jpg"
+                        href="assets/images/EBB2018.JPG"
                         data-gal="prettyPhoto[gallery]">
                         <div class="content-overlay"></div>
-                        <img src="assets/images/p5.jpg"
+                        <img src="assets/images/EBB2018.JPG"
                             alt="portfolio-img" class="img-fluid w3layouts agileits">
                         <div class="content-details fadeIn-bottom">
                             <h3 class="content-title">
-                              Risk Based Inspection (RBI)                           </h3>
+                              EasyBuyBye                        </h3>
                             <p class="content-text">
-                              Risk-Based Inspection is an analysis methodology and process that, as opposed to condition
-                              based inspection                            </p>
+                             With Easybuybye Team                             </p>
                         </div>
                     </a>
                 </span>
@@ -191,16 +187,16 @@ Author email: nidhiarivu@gmail.com
             <li class="portfolio-item2 content" data-id="id-7" data-type="cat-item-1">
                 <span class="image-block">
                     <a class="image-zoom"
-                        href="assets/images/sjcbig.png"
+                        href="assets/images/EXPO2017.jpg"
                         data-gal="prettyPhoto[gallery]">
                         <div class="content-overlay"></div>
-                        <img src="assets/images/sjc.jpg"
+                        <img src="assets/images/expo.jpg"
                             alt="portfolio-img" class="img-fluid w3layouts agileits">
                         <div class="content-details fadeIn-bottom">
                             <h3 class="content-title">
-                                 SJ Classic                            </h3>
+                                 ME Expo 2017                           </h3>
                             <p class="content-text">
-                                SJ classic Manufacturing Sdn Bhd is one of the pioneers in the metal steel roofing industry in Malaysia. 
+                                It was the leading e-commerce trade show and conference in Malaysia for SMEs and corporations, showcasing industrial technologies, services, and updates. 
                                                          </p>
                         </div>
                     </a>
